# Splink_dub

./: .gitignore  CLI_USAGE.md  EVALUATION_ENHANCEMENT.md  Erkennung_Predictions.md  HYBRID_NORMALIZATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTES.md  NORMALIZATION_SUMMARY.md  PERSISTENT_DUCKDB_FEATURES.md  PROJECT_OVERVIEW.md  README.md  TESTING_GUIDE.md  app.py  project_restructure_summary.md  pyproject.toml  test_optimization.py
legacy/: dublette_detection.py
output/: company_a_data.csv  company_b_data.csv  evaluation_report.md  partner_test.csv  target_table.csv
src/dublette/: app.py
src/dublette/data/: check_db.py  explore.py  generation.py  normalization.py
src/dublette/database/: check_db.py  connection.py  evaluation_data.py  input_and_reference_data.py  input_data.py  prediction_data.py  reference_data.py
src/dublette/detection/: splink_config.py
src/dublette/evaluation/: estimating_model_parameter.py  metrics.py  printout.py
src/dublette/model/: linker_settings.py  train_predict.py
src/dublette/old/: splink_config.old.py
