[project]
name = "dublette"
version = "0.1.0"
description = "Proof of concept for duplicate detection using Splink with DuckDB"
requires-python = ">=3.13"
dependencies = [
    "splink",
    "duckdb",
    "pandas",
    "jupyter",
    "matplotlib",
    "seaborn",
    "click",
]

[project.scripts]
dublette = "dublette.app:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
